worked on the blog portion. Fixed the slider for small and larger screens.

--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -8,3 +8,10 @@ nav {
     width: 75rem;
     
 }
+
+main {
+    width: 75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
