--- a/styles/_medium.scss
+++ b/styles/_medium.scss
@@ -1,1 +1,11 @@
 @import './variables';
+
+.hero-sm {
+  display: none;
+}
+.hero-lg {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+}
