--- a/styles/_small.scss
+++ b/styles/_small.scss
@@ -160,23 +160,16 @@ header {
 }
 
 main {
-    width: 95vw;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 30px;
-    h2 {
-        width: 95vw;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        font-family: $font;
-    }
 }
 
 .hero-sm {
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -189,25 +182,70 @@ main {
     display: none;
 }
 
-.main-content {
-    width: 95vw;
-    img {
-        width: 50%;
-        float: right;
-        margin: 0px 0px 0px 4px;
-    }
-    p {
-        margin: 0px 4px 0px 0px;
-        font-size: 12pt;
+.blog-articles {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h2 {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         font-family: $font;
     }
 }
-
-.md {
-    display: none;
+.blog-teasers {
+    width: 100%;
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+        "one two"
+        "three four"
+    ;
+    margin-bottom: 20px;
 }
-.lg {
-    display: none;
+
+.one {
+    grid-area: one;
+    a {
+        text-decoration: none;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+.two {
+    grid-area: two;
+    a {
+        text-decoration: none;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+.three {
+    grid-area: three;
+    a {
+        text-decoration: none;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+.four {
+    grid-area: four;
+    a {
+        text-decoration: none;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 footer {
