--- a/styles/styles.css
+++ b/styles/styles.css
@@ -498,23 +498,16 @@ header .phone-num {
 }
 
 main {
-  width: 95vw;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 30px;
 }
-main h2 {
-  width: 95vw;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-family: "Montserrat", sans-serif;
-}
 
 .hero-sm {
-  width: 100vw;
+  width: 100%;
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -528,26 +521,71 @@ main h2 {
   display: none;
 }
 
-.main-content {
-  width: 95vw;
+.blog-articles {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.main-content img {
-  width: 50%;
-  float: right;
-  margin: 0px 0px 0px 4px;
-}
-.main-content p {
-  margin: 0px 4px 0px 0px;
-  font-size: 12pt;
+.blog-articles h2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   font-family: "Montserrat", sans-serif;
 }
 
-.md {
-  display: none;
+.blog-teasers {
+  width: 100%;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "one two" "three four";
+  margin-bottom: 20px;
 }
 
-.lg {
-  display: none;
+.one {
+  grid-area: one;
+}
+.one a {
+  text-decoration: none;
+}
+.one a img {
+  width: 100%;
+  height: 100%;
+}
+
+.two {
+  grid-area: two;
+}
+.two a {
+  text-decoration: none;
+}
+.two a img {
+  width: 100%;
+  height: 100%;
+}
+
+.three {
+  grid-area: three;
+}
+.three a {
+  text-decoration: none;
+}
+.three a img {
+  width: 100%;
+  height: 100%;
+}
+
+.four {
+  grid-area: four;
+}
+.four a {
+  text-decoration: none;
+}
+.four a img {
+  width: 100%;
+  height: 100%;
 }
 
 footer {
@@ -572,6 +610,16 @@ footer p {
 
 @media only screen and (min-width: 48rem) {
   @import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
+  .hero-sm {
+    display: none;
+  }
+
+  .hero-lg {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+  }
 }
 /* end of media query */
 @media only screen and (min-width: 75rem) {
@@ -582,6 +630,13 @@ footer p {
 
   nav {
     width: 75rem;
+  }
+
+  main {
+    width: 75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 /* end of media query */
