--- a/styles/styles.css
+++ b/styles/styles.css
@@ -538,67 +538,177 @@ main {
 .blog-teasers {
   width: 100%;
   display: grid;
-  gap: 15px;
+  gap: 20px;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-areas: "one two" "three four";
+  grid-template-rows: repeat(2, auto);
   margin-bottom: 20px;
 }
 
-.one {
-  grid-area: one;
-}
-.one a {
-  text-decoration: none;
-}
-.one a img {
-  width: 100%;
-  height: 100%;
+.blogItem:hover .blogImg {
+  opacity: 100%;
 }
 
-.two {
-  grid-area: two;
-}
-.two a {
-  text-decoration: none;
-}
-.two a img {
+.blogLink {
+  display: block;
   width: 100%;
   height: 100%;
+  text-decoration: none;
+  position: relative;
 }
 
-.three {
-  grid-area: three;
-}
-.three a {
-  text-decoration: none;
-}
-.three a img {
+.blogImg {
   width: 100%;
   height: 100%;
+  opacity: 75%;
 }
 
-.four {
-  grid-area: four;
-}
-.four a {
-  text-decoration: none;
-}
-.four a img {
+.blogH4 {
+  position: absolute;
+  top: 0;
+  font-family: "Montserrat", sans-serif;
+  color: white;
   width: 100%;
-  height: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.6);
+  margin: 0;
+}
+
+.blogP {
+  position: absolute;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.6);
+  margin: 0;
 }
 
 footer {
   width: 100vw;
-  height: 50px;
-  background: #eb5e55;
+  background: #bbbbbb;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-footer p {
+footer .copyright {
   font-family: "Montserrat", sans-serif;
+  color: #3a506b;
+}
+
+.footer-info {
+  width: 95%;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(3, auto);
+  margin-top: 20px;
+}
+
+.contact-us {
+  width: 100%;
+}
+.contact-us h2 {
+  font-family: "Montserrat", sans-serif;
+  color: #3a506b;
+  margin: 0;
+}
+.contact-us p {
+  font-family: "Montserrat", sans-serif;
+  margin: 5px 0px 15px 0px;
+}
+.contact-us p a {
+  text-decoration: none;
+  color: black;
+}
+
+.newsletter {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.newsletter h2 {
+  font-family: "Montserrat", sans-serif;
+  color: #3a506b;
+  margin: 0;
+}
+.newsletter p {
+  font-family: "Montserrat", sans-serif;
+  margin: 5px 0px 15px 0px;
+}
+.newsletter input {
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  border: none;
+  margin-bottom: 10px;
+}
+.newsletter button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+  background: #197bbd;
   color: white;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+  transition: ease-in-out 0.3s;
+}
+.newsletter button:hover {
+  background: #1c8ad4;
+}
+
+.why-cabot {
+  width: 100%;
+}
+.why-cabot h2 {
+  font-family: "Montserrat", sans-serif;
+  color: #3a506b;
+  margin: 0;
+}
+.why-cabot p {
+  font-family: "Montserrat", sans-serif;
+  margin: 5px 0px 15px 0px;
+}
+
+.social-wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #555555;
+  margin: 10px 0px 10px 0px;
+}
+
+.social-icons {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-icons a {
+  padding: 10px 0px 10px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: ease-in-out 0.2s;
+}
+.social-icons a:hover {
+  background: #197bbd;
+}
+.social-icons img {
+  width: 40px;
+  height: 100%;
+  margin: 0px 15px 0px 15px;
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
@@ -610,6 +720,90 @@ footer p {
 
 @media only screen and (min-width: 48rem) {
   @import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
+  #lg-nav {
+    display: flex;
+    width: 100vw;
+    height: 50px;
+    background: #197bbd;
+  }
+
+  .nav-body {
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  #lg-dd-menu {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+  }
+
+  .lg-dd-item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .lg-dd-item a {
+    color: white;
+    text-decoration: none;
+  }
+
+  #lg-dd-sub-menu {
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #lg-dd-sub-menu a {
+    width: 100%;
+    height: 40px;
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    background: #197bbd;
+    border-bottom: solid 1px white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 40px;
+  }
+
+  .search {
+    width: 200px;
+    height: 25px;
+    display: flex;
+  }
+  .search input {
+    width: 170px;
+    height: 100%;
+    border: none;
+  }
+  .search button {
+    width: 30px;
+    height: 25px;
+    border: none;
+    background: lightgrey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .search button img {
+    width: 20px;
+    height: 20px;
+  }
+
+  #sm-nav {
+    display: none;
+  }
+
   .hero-sm {
     display: none;
   }
@@ -620,6 +814,15 @@ footer p {
     display: flex;
     align-items: flex-end;
   }
+
+  .blog-teasers {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer-info {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
 }
 /* end of media query */
 @media only screen and (min-width: 75rem) {
@@ -628,8 +831,19 @@ footer p {
     width: 75rem;
   }
 
-  nav {
+  #lg-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .nav-body {
     width: 75rem;
+  }
+
+  #lg-dd-menu {
+    padding-left: 0;
+    width: 50%;
   }
 
   main {
@@ -637,6 +851,25 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .blog-articles {
+    width: 100%;
+  }
+
+  .blog-teasers {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, auto);
+  }
+
+  .blogH4 {
+    font-size: 16pt;
+  }
+
+  .footer-info {
+    width: 75rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, auto);
   }
 }
 /* end of media query */
