--- a/styles/_medium.scss
+++ b/styles/_medium.scss
@@ -1,5 +1,85 @@
 @import './variables';
 
+#lg-nav {
+  display: flex;
+  width: 100vw;
+  height: 50px;
+  background: $prime;
+}
+.nav-body {
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#lg-dd-menu {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  list-style: none;
+}
+.lg-dd-item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  a {
+    color: white;
+    text-decoration: none;;
+  }
+}
+#lg-dd-sub-menu {
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  a {
+      width: 100%;
+      height: 40px;
+      font-family: $font;
+      color: white;
+      background: $prime;
+      border-bottom: solid 1px white;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      padding-left: 40px;
+  }
+}
+.search {
+  width: 200px;
+  height: 25px;
+  display: flex;
+
+  input {
+      width: 170px;
+      height: 100%;
+      border: none;
+  }
+  button {
+      width: 30px;
+      height: 25px;
+      border: none;
+      background: lightgrey;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+          width: 20px;
+          height: 20px;
+      }
+  }
+}
+
+#sm-nav {
+  display: none;
+}
+
 .hero-sm {
   display: none;
 }
@@ -8,4 +88,14 @@
   position: relative;
   display: flex;
   align-items: flex-end;
+}
+
+
+.blog-teasers {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-info {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
 }
