--- a/styles/_small.scss
+++ b/styles/_small.scss
@@ -198,66 +198,171 @@ main {
 .blog-teasers {
     width: 100%;
     display: grid;
-    gap: 15px;
+    gap: 20px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-        "one two"
-        "three four"
-    ;
+    grid-template-rows: repeat(2, auto);
     margin-bottom: 20px;
 }
+.blogItem {
+    &:hover {
+        .blogImg {
+            opacity: 100%;
+        }
+    }
+}
+.blogLink {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    position: relative;
+}
+.blogImg {
+    width: 100%;
+    height: 100%;
+    opacity: 75%;
+}
+.blogH4 {
+    position: absolute;
+    top: 0;
+    font-family: $font;
+    color: white; 
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,0.6);
+    margin: 0;
 
-.one {
-    grid-area: one;
-    a {
-        text-decoration: none;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
 }
-.two {
-    grid-area: two;
-    a {
-        text-decoration: none;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-.three {
-    grid-area: three;
-    a {
-        text-decoration: none;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-.four {
-    grid-area: four;
-    a {
-        text-decoration: none;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
+.blogP {
+    position: absolute;
+    font-family: $font;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,0.6);
+    margin: 0;
 }
 
 footer {
     width: 100vw;
-    height: 50px;
-    background: $third;
+    background: $grey;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    .copyright {
+        font-family: $font;
+        color: $second;
+    }
+}
+.footer-info {
+    width: 95%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, auto);
+    margin-top: 20px;
+}
+.contact-us {
+    width: 100%;
+    h2 {
+        font-family: $font;
+        color: $second;
+        margin: 0;
+    }
     p {
         font-family: $font;
+        margin: 5px 0px 15px 0px;
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    }
+}
+.newsletter {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    h2 {
+        font-family: $font;
+        color: $second;
+        margin: 0;
+    }
+    p {
+        font-family: $font;
+        margin: 5px 0px 15px 0px;
+    }
+    input {
+        width: 100%;
+        height: 40px;
+        padding: 5px;
+        border: none;
+        margin-bottom: 10px;
+    }
+    button {
+        width: 100%;
+        height: 40px;
+        border: none;
+        border-radius: 4px;
+        background: $prime;
         color: white;
+        cursor: pointer;
+        font-family: $font;
+        transition: ease-in-out 0.3s;
+        &:hover {
+            background: lighten($prime, 5%);
+        }
+    }
+}
+.why-cabot {
+    width: 100%;
+    h2 {
+        font-family: $font;
+        color: $second;
+        margin: 0;
+    }
+    p {
+        font-family: $font;
+        margin: 5px 0px 15px 0px;
+    }
+}
+
+.social-wrap {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: darken($grey, 40%);
+    margin: 10px 0px 10px 0px;
+}
+.social-icons {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    a {
+        padding: 10px 0px 10px 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: ease-in-out 0.2s;
+        &:hover {
+            background: $prime;
+        }
+    }
+    img {
+        width: 40px;
+        height: 100%;
+        margin: 0px 15px 0px 15px;
     }
 }
 
