--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -11,10 +11,12 @@ header {
 .nav-body {
     width: 75rem;
 }
-#lg-dd-menu {
-    padding-left: 0;
-    width: 50%;
-  }
+.lg-dd-item {
+    width: 13%;
+}
+#sub-menu-nav {
+    width: 13%;
+}
 
 main {
     width: 75rem;
