--- a/styles/_medium.scss
+++ b/styles/_medium.scss
@@ -2,60 +2,77 @@
 
 #lg-nav {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
-  height: 50px;
   background: $prime;
 }
 .nav-body {
   width: 95%;
-  height: 100%;
+  height: 40px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
 #lg-dd-menu {
-  width: 60%;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   list-style: none;
+  padding-left: 0;
 }
 .lg-dd-item {
-  width: 100%;
+  width: 25%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   a {
     color: white;
-    text-decoration: none;;
+    text-decoration: none;
   }
 }
-#lg-dd-sub-menu {
+#sub-menu-nav {
+  width: 25%;
+  // height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+  .sub-menu-nav-link {
+    color: white;
+    text-decoration: none;
+  }
+}
+#sub-nav {
   width: 100%;
   display: none;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background: $prime;
+  position: absolute;
+  top: 28px;
+  z-index: 1000;
   a {
-      width: 100%;
-      height: 40px;
-      font-family: $font;
-      color: white;
-      background: $prime;
-      border-bottom: solid 1px white;
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      padding-left: 40px;
+    font-family: $font;
+    font-size: 11pt;
+    color: white;
+    text-decoration: none;
+    padding: 15px 0px 15px 10px;
+    border-bottom: solid 1px white;
+    transition: ease-in-out 0.2s;
+    &:hover {
+      background: lighten($prime, 10%);
+    }
   }
 }
+
 .search {
   width: 200px;
   height: 25px;
   display: flex;
-
   input {
       width: 170px;
       height: 100%;
